# modfriskers

./: .bootstrap  .dnt.db  .gitattributes  .gitignore  .mailmap  .todo  Makefile.am  Makefile.sub  Makefile.top  bootstrap  configure.ac  configure.ac.in  perl-autofrisk  perl.af  python-autofrisk
man/: Makefile.am  perl-autofrisk.x  python-autofrisk.x
site/in/: Makefile.am  contents.as  development.scm  downloads.scm  footer.sxml  index.scm  installation.scm  pages.as  site.as
src/: Makefile.am  perl-autofrisk.in  perl-autofrisk.m4  python-autofrisk.in  python-autofrisk.m4
tests/: Makefile.am  defs.in  test-fail.in  test-perl-autofrisk-01.in  test-perl-autofrisk-02.in  test-python-autofrisk-01.in  test-python-autofrisk-02.in  test-success.in  wrapper.in
tools/autotools/m4/: Makefile.am  ax_prog_perl_modules.m4  perl_autofrisk.m4
tools/maint/: Makefile.am
